output/.nfs00000001425d1b7f0000001c
Unloaded module: latex/TeXLive12
Loaded module: python3/3.6.2
  File "KRR/KRR_script_4_newest.py", line 41
    if Feature="SimpleLarge":
              ^
SyntaxError: invalid syntax
